--- a/Rebels/Base.lproj/Main.storyboard
+++ b/Rebels/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="c2A-Lp-BB2">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,190 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="starsBackground" translatesAutoresizingMaskIntoConstraints="NO" id="O78-o1-w6K">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RebelsLabel3" translatesAutoresizingMaskIntoConstraints="NO" id="HGL-Ui-Z99">
+                                <rect key="frame" x="45" y="393" width="285" height="44"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hz2-nZ-Q7k">
+                                <rect key="frame" x="54" y="513" width="267" height="36"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="e7M-IK-cYm"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="OriyaSangamMN" family="Oriya Sangam MN" pointSize="17"/>
+                                <state key="normal" title="Click here to start your campain">
+                                    <color key="titleColor" red="1" green="1" blue="0.047865316901408453" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="eld-BM-lCE" kind="show" id="9dQ-FK-B9P"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" alpha="0.65000000000000002" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rebelsLogo" translatesAutoresizingMaskIntoConstraints="NO" id="HW5-Fo-VqS">
+                                <rect key="frame" x="54" y="108" width="260" height="260"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="260" id="7vd-CV-sZx"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="HW5-Fo-VqS" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="44" id="0IG-Vw-O63"/>
+                            <constraint firstItem="HGL-Ui-Z99" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="45" id="1rU-zq-FNF"/>
+                            <constraint firstItem="O78-o1-w6K" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2L7-0a-ndw"/>
+                            <constraint firstItem="Hz2-nZ-Q7k" firstAttribute="leading" secondItem="HW5-Fo-VqS" secondAttribute="leading" id="6sW-3G-lv3"/>
+                            <constraint firstItem="O78-o1-w6K" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="8Tu-e4-euR"/>
+                            <constraint firstItem="O78-o1-w6K" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ATm-gU-BLl"/>
+                            <constraint firstItem="Hz2-nZ-Q7k" firstAttribute="centerX" secondItem="O78-o1-w6K" secondAttribute="centerX" id="LvR-ZE-HKD"/>
+                            <constraint firstItem="Hz2-nZ-Q7k" firstAttribute="top" secondItem="HGL-Ui-Z99" secondAttribute="bottom" constant="76" id="UuV-Dc-tdC"/>
+                            <constraint firstItem="Hz2-nZ-Q7k" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="54" id="XIK-H2-Smy"/>
+                            <constraint firstItem="O78-o1-w6K" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="YKf-rd-mEK"/>
+                            <constraint firstItem="HGL-Ui-Z99" firstAttribute="top" secondItem="HW5-Fo-VqS" secondAttribute="bottom" constant="25" id="eZs-UG-dBI"/>
+                            <constraint firstItem="O78-o1-w6K" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="gzp-l6-Tuv"/>
+                            <constraint firstItem="O78-o1-w6K" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="jIy-sw-hIN"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Hz2-nZ-Q7k" secondAttribute="bottom" constant="118" id="nB6-fV-1m4"/>
+                            <constraint firstItem="HGL-Ui-Z99" firstAttribute="centerX" secondItem="Hz2-nZ-Q7k" secondAttribute="centerX" id="pzg-Ay-mD6"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HW5-Fo-VqS" secondAttribute="trailing" constant="61" id="zqh-Eu-7jD"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="pRe-Qm-XYh">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="Q1N-kW-ChJ"/>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1000.8" y="26.53673163418291"/>
+        </scene>
+        <!--Players-->
+        <scene sceneID="aio-QN-da7">
+            <objects>
+                <tableViewController id="42Z-wn-Rzp" customClass="PlayersTableViewController" customModule="Rebels" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="5ft-je-juc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PlayersTableViewCell" id="fU6-Ib-9Lo" customClass="PlayersTableViewCell" customModule="Rebels" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fU6-Ib-9Lo" id="CWA-pv-doz">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="42Z-wn-Rzp" id="idm-rB-mqb"/>
+                            <outlet property="delegate" destination="42Z-wn-Rzp" id="5TQ-oV-Vs3"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Players" id="Nca-b1-stH">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="yPO-mJ-BQU">
+                            <color key="tintColor" red="1" green="1" blue="0.047865316900000003" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <segue destination="V5G-ph-vbK" kind="presentation" id="evG-oL-qCB"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="R2Z-ac-wae" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1870" y="-621"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="7wK-rx-VU6">
+            <objects>
+                <navigationController id="c2A-Lp-BB2" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" backIndicatorImage="RebelsLabel" id="Xlh-Is-kHQ">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="1" green="1" blue="0.047865316900000003" alpha="1" colorSpace="calibratedRGB"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <color key="textColor" red="1" green="1" blue="0.047865316900000003" alpha="1" colorSpace="calibratedRGB"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="q2i-iz-KpK"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AVk-dV-eFI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="222" y="27"/>
+        </scene>
+        <!--Players-->
+        <scene sceneID="7yV-7X-Mgp">
+            <objects>
+                <collectionViewController id="eld-BM-lCE" customClass="PlayersCollectionViewController" customModule="Rebels" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="wFw-Q1-3pt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="7Q3-MM-DUW">
+                            <size key="itemSize" width="80" height="80"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PlayersCollectionViewCell" id="9mV-QB-zvs" customClass="PlayersCollectionViewCell" customModule="Rebels" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                    <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </view>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="eld-BM-lCE" id="syV-rJ-2tK"/>
+                            <outlet property="delegate" destination="eld-BM-lCE" id="139-dH-dwR"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" title="Players" id="4A0-SK-Bx7">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="PG0-5N-03P">
+                            <color key="tintColor" red="1" green="1" blue="0.047865316900000003" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <segue destination="V5G-ph-vbK" kind="show" id="Ml2-WK-MP8"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GSP-VV-Udd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1900" y="362.96851574212894"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="mLE-Kn-nLY">
+            <objects>
+                <viewController id="V5G-ph-vbK" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="KaK-UB-Vh3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="Nt6-10-pJ2"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xLK-B7-1zZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2866" y="-174"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="RebelsLabel" width="283.5" height="40"/>
+        <image name="RebelsLabel3" width="178" height="31"/>
+        <image name="rebelsLogo" width="529" height="530"/>
+        <image name="starsBackground" width="162" height="320"/>
+    </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="Ml2-WK-MP8"/>
+    </inferredMetricsTieBreakers>
 </document>
