--- a/Rebels/Base.lproj/Main.storyboard
+++ b/Rebels/Base.lproj/Main.storyboard
@@ -71,7 +71,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-102" y="320"/>
+            <point key="canvasLocation" x="-26" y="320"/>
         </scene>
         <!--Players-->
         <scene sceneID="7yV-7X-Mgp">
@@ -140,7 +140,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GSP-VV-Udd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2200.8000000000002" y="319.79010494752629"/>
+            <point key="canvasLocation" x="1802" y="320"/>
         </scene>
         <!--New Player View Controller-->
         <scene sceneID="mLE-Kn-nLY">
@@ -202,7 +202,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xLK-B7-1zZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3121" y="320"/>
+            <point key="canvasLocation" x="2578" y="320"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="FRb-oA-lbw">
@@ -225,7 +225,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3xX-84-sii" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="975" y="320"/>
+            <point key="canvasLocation" x="854" y="320"/>
         </scene>
         <!--Edit Player View Controller-->
         <scene sceneID="57q-BO-NL3">
@@ -271,6 +271,16 @@
                                     <action selector="saveButton:" destination="6uf-8c-DEo" eventType="touchUpInside" id="x3j-fO-bfo"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HEu-WT-2pM">
+                                <rect key="frame" x="160" y="567" width="54" height="46"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="trashCan">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="trashButton:" destination="6uf-8c-DEo" eventType="touchUpInside" id="6I6-Ki-zmv"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="Xy2-qJ-5IM"/>
@@ -282,12 +292,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jV3-Su-8qv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3121" y="1017"/>
+            <point key="canvasLocation" x="1801" y="-427"/>
         </scene>
-        <!--View Controller-->
+        <!--Options View Controller-->
         <scene sceneID="tB5-pk-KsS">
             <objects>
-                <viewController storyboardIdentifier="StartGameViewController" id="zel-J3-WRP" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="OptionsViewController" id="zel-J3-WRP" customClass="OptionsViewController" customModule="Rebels" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="vWG-TF-HEL">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -295,42 +305,13 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="starsBackground" translatesAutoresizingMaskIntoConstraints="NO" id="gkd-eT-Nd9">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RebelsLabel3" translatesAutoresizingMaskIntoConstraints="NO" id="OjL-eJ-OEl">
-                                <rect key="frame" x="45" y="349" width="285" height="88"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zbq-oR-rTw">
-                                <rect key="frame" x="54" y="513" width="267" height="36"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="36" id="ZBz-UV-X9d"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="OriyaSangamMN" family="Oriya Sangam MN" pointSize="17"/>
-                                <state key="normal" title="Click here to start your campain">
-                                    <color key="titleColor" red="1" green="1" blue="0.047865316900000003" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                            </button>
-                            <imageView userInteractionEnabled="NO" alpha="0.64999997615814209" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rebelsLogo" translatesAutoresizingMaskIntoConstraints="NO" id="aHT-c8-BvS">
-                                <rect key="frame" x="54" y="64" width="260" height="260"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="260" id="Dfq-YF-bcs"/>
-                                </constraints>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="OjL-eJ-OEl" firstAttribute="top" secondItem="aHT-c8-BvS" secondAttribute="bottom" constant="25" id="0bv-ZM-tyF"/>
-                            <constraint firstItem="fo4-S8-1MG" firstAttribute="trailing" secondItem="aHT-c8-BvS" secondAttribute="trailing" constant="61" id="98Z-nb-zGc"/>
-                            <constraint firstItem="aHT-c8-BvS" firstAttribute="top" secondItem="fo4-S8-1MG" secondAttribute="top" constant="44" id="BN6-7i-2O8"/>
                             <constraint firstItem="gkd-eT-Nd9" firstAttribute="bottom" secondItem="fo4-S8-1MG" secondAttribute="bottom" id="Ebf-kf-dgS"/>
                             <constraint firstItem="gkd-eT-Nd9" firstAttribute="leading" secondItem="fo4-S8-1MG" secondAttribute="leading" id="Fkp-ap-ws5"/>
-                            <constraint firstItem="Zbq-oR-rTw" firstAttribute="leading" secondItem="aHT-c8-BvS" secondAttribute="leading" id="JTq-Z3-tT5"/>
-                            <constraint firstItem="fo4-S8-1MG" firstAttribute="bottom" secondItem="Zbq-oR-rTw" secondAttribute="bottom" constant="118" id="Kcy-zo-gKd"/>
-                            <constraint firstItem="OjL-eJ-OEl" firstAttribute="leading" secondItem="fo4-S8-1MG" secondAttribute="leading" constant="45" id="Px6-nu-Nra"/>
                             <constraint firstItem="gkd-eT-Nd9" firstAttribute="trailing" secondItem="fo4-S8-1MG" secondAttribute="trailing" id="R1N-pv-gd5"/>
-                            <constraint firstItem="OjL-eJ-OEl" firstAttribute="centerX" secondItem="Zbq-oR-rTw" secondAttribute="centerX" id="U4l-bA-1jo"/>
                             <constraint firstItem="gkd-eT-Nd9" firstAttribute="centerY" secondItem="vWG-TF-HEL" secondAttribute="centerY" id="Ukm-De-hdN"/>
-                            <constraint firstItem="Zbq-oR-rTw" firstAttribute="centerX" secondItem="gkd-eT-Nd9" secondAttribute="centerX" id="UyS-Mc-HdF"/>
-                            <constraint firstItem="Zbq-oR-rTw" firstAttribute="leading" secondItem="fo4-S8-1MG" secondAttribute="leading" constant="54" id="VfD-8X-8oF"/>
-                            <constraint firstItem="Zbq-oR-rTw" firstAttribute="top" secondItem="OjL-eJ-OEl" secondAttribute="bottom" constant="76" id="bMk-UH-IXT"/>
                             <constraint firstItem="gkd-eT-Nd9" firstAttribute="top" secondItem="vWG-TF-HEL" secondAttribute="top" id="ltN-9r-vJU"/>
                             <constraint firstItem="gkd-eT-Nd9" firstAttribute="centerX" secondItem="vWG-TF-HEL" secondAttribute="centerX" id="vHP-GY-LTY"/>
                         </constraints>
@@ -342,14 +323,15 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Is0-eZ-QLe" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-103" y="1017"/>
+            <point key="canvasLocation" x="-26" y="1013"/>
         </scene>
     </scenes>
     <resources>
         <image name="RebelsLabel" width="283.5" height="40"/>
         <image name="RebelsLabel3" width="178" height="31"/>
-        <image name="add_user_male" width="30" height="30"/>
+        <image name="add_user_male" width="45" height="45"/>
         <image name="rebelsLogo" width="529" height="530"/>
         <image name="starsBackground" width="162" height="320"/>
+        <image name="trashCan" width="128" height="128"/>
     </resources>
 </document>
