Concertar retorno ao seletor de recrutas a partir do fim de uma missão

--- a/Rebels/GameViewControllers/VoteMission/VoteMissionView.xib
+++ b/Rebels/GameViewControllers/VoteMission/VoteMissionView.xib
@@ -31,7 +31,7 @@
                     <rect key="frame" x="63" y="675" width="110" height="50"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="1" green="1" blue="0.047865316900000003" alpha="1" colorSpace="calibratedRGB"/>
-                    <fontDescription key="fontDescription" name="Renegado3DItalic" family="Renegado 3D Italic" pointSize="17"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <state key="normal" title="Rejeitar">
                         <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                     </state>
@@ -40,7 +40,7 @@
                     <rect key="frame" x="241" y="675" width="110" height="50"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="1" green="1" blue="0.047865316900000003" alpha="1" colorSpace="calibratedRGB"/>
-                    <fontDescription key="fontDescription" name="Renegado3DItalic" family="Renegado 3D Italic" pointSize="17"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <state key="normal" title="Aprovar">
                         <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                     </state>
